@@ -11,7 +11,7 @@ package SBO::App::Remove;
 use 5.16.0;
 use strict;
 use warnings FATAL => 'all';
-use SBO::Lib qw/ get_inst_names get_installed_packages get_sbo_location get_build_queue get_full_queue merge_queues get_required_by get_requires get_readme_contents get_reverse_reqs prompt show_version in lint_sbo_config wrapsay %config /;
+use SBO::Lib qw/ get_inst_names get_installed_packages get_sbo_location get_build_queue get_full_queue merge_queues get_requires get_readme_contents get_reverse_reqs prompt show_version in lint_sbo_config wrapsay %config /;
 use Getopt::Long qw(GetOptionsFromArray :config bundling);
 
 use parent 'SBO::App';
@@ -150,6 +150,18 @@ sub confirm {
   }
   say " * Ignoring.\n";
   return 0;
+}
+
+sub get_required_by {
+  my ($sbo, $confirmed, $required_by) = @_;
+  my @dep_of;
+
+  if ( $required_by->{$sbo} ) {
+    for my $req_by (keys %{$required_by->{$sbo}}) {
+      push @dep_of, $req_by unless in($req_by => @$confirmed);
+    }
+  }
+  return @dep_of;
 }
 
 sub remove {
