@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Sweetmorn, Chaos 1, 3191 YOLD" "" "sbotools 3.3"
+.TH SBO::Lib::Info 3 "Prickle-Prickle, Chaos 4, 3191 YOLD" "" "sbotools 3.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -100,6 +100,16 @@ corresponding value is the expected md5sum.
 .PP
 \&\f(CWget_from_info()\fR retrieves the information under \f(CW$key\fR from the info file
 in \f(CW$location\fR.
+.SS get_full_reverse
+.IX Subsection "get_full_reverse"
+.Vb 1
+\&  my @get_full_reverse = get_full_reverse($sbo, %installed, %fulldeps, @list)
+.Ve
+.PP
+\&\f(CWget_full_reverse()\fR takes a SlackBuild, a hash of installed packages, a hash
+of reverse dependency relationships (from \f(CW\*(C`get_reverse_reqs\*(C'\fR) and an array.
+The array should be empty when called from outside of the subroutine. It
+returns an array with installed reverse dependencies.
 .SS get_orig_build_number
 .IX Subsection "get_orig_build_number"
 .Vb 1
@@ -116,16 +126,6 @@ given \f(CW$sbo\fR, calling \f(CWget_sbo_build_number()\fR.
 .PP
 \&\f(CWget_orig_version()\fR returns the version in the SlackBuilds.org tree for the
 given \f(CW$sbo\fR, calling \f(CWget_sbo_version()\fR.
-.SS get_required_by
-.IX Subsection "get_required_by"
-.Vb 1
-\&  my @dep_of = get_required_by($sbo, $confirmed, $required_by);
-.Ve
-.PP
-\&\f(CWget_required_by()\fR takes a SlackBuild, an array with already-confirmed
-requirements and a hash with requirements for a group of SlackBuilds (all
-installed SlackBuilds, for example). It returns an array with SlackBuilds
-depending on the SlackBuild in the first argument.
 .SS get_requires
 .IX Subsection "get_requires"
 .Vb 1
@@ -140,7 +140,8 @@ depending on the SlackBuild in the first argument.
 .Ve
 .PP
 \&\f(CWget_reverse_reqs()\fR takes a list of SlackBuilds and returns a hashref with
-other SlackBuilds requiring them.
+reverse dependencies among them. \f(CW$slackbuilds\fR should ordinarily
+be a list of all installed scripts.
 .SS get_sbo_build_number
 .IX Subsection "get_sbo_build_number"
 .Vb 1
