@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Tree 3"
-.TH SBO::Lib::Tree 3 "Sweetmorn, Chaos 1, 3191 YOLD" "" "sbotools 3.3"
+.TH SBO::Lib::Tree 3 "Prickle-Prickle, Chaos 4, 3191 YOLD" "" "sbotools 3.3"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
